--- a/rmd for html.Rmd
+++ b/rmd for html.Rmd
@@ -29,3 +29,11 @@ babynames %>%
   ggplot(aes(x = year, y = n)) +
   geom_line()
 ```
+
+```{r}
+babynames %>% 
+  filter(name == "Sky", year >= 2000) %>% 
+  ggplot(aes(x = year, y = n, color = sex)) +
+  geom_point()
+```
+
